Implement REST resource for adding resource user groups
